fix: authentication